--- a/templates/clientattr.html
+++ b/templates/clientattr.html
@@ -19,7 +19,7 @@
 					<div class="page-logo"></div>
 					<div class="page-name">| client attributes </div>
 					<a href="/#" title="Back to vacancy priority..."> <img class="rtrn" style="border: 0;"/></img> </a>
-					<div class="page-details">logged as: {{usrname}} <i>({{usrlvl}})</i></div>
+					<div class="page-details"><b>logged as: </b>{{usrname}} <i>({{usrlvl}})</i></div>
 				</div>
 				
 				<div>
